--- a/ts-all-in-one/package.json
+++ b/ts-all-in-one/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
